# compas_timber

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTEXT.md  CONTRIBUTING.md  CONTRIBUTING.rst  KINEMATIC_CONSTRAINTS_SPEC.md  LICENSE  MANIFEST.in  README.md  README.rst  codecov.yml  doc_versions.txt  index.html  latest  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py  versions.json
.claude/: feature_design.md
.github/: copilot-instructions.md  pull_request_template.md
0.10.1/: .buildinfo  api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  tutorials.html
0.11.0/: .buildinfo  api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  tutorials.html
0.12.0/: .buildinfo  api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  tutorials.html
0.13.0/: .buildinfo  api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  tutorials.html
0.14.0/: api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  search.html  tutorials.html
0.14.1/: api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  tutorials.html
0.14.2/: .buildinfo  api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  search.html  searchindex.js  tutorials.html
0.15.0/: api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  tutorials.html
0.15.1/: api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  search.html  tutorials.html
0.15.3/: .buildinfo  api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  tutorials.html
0.16.0/: examples.html  index.html  search.html  searchindex.js
0.16.1/: api.html  citing.html  genindex.html  installation.html  license.html  objects.inv
0.16.2/: api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  search.html  tutorials.html
0.2.11/: api.html
0.2.12/: api.html  examples.html  index.html  installation.html  objects.inv  tutorials.html
0.2.15/: .buildinfo  api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  output.json  output.txt  py-modindex.html  search.html  searchindex.js  tutorials.html
0.2.16/: .buildinfo  objects.inv  output.json  output.txt
0.3.0/: citing.html  license.html  output.json  output.txt  py-modindex.html  search.html
0.3.1/: output.json  output.txt  search.html
0.4.0/: .buildinfo  api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  tutorials.html
0.5.0/: .buildinfo  api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  tutorials.html
0.5.1/: api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  tutorials.html
0.6.0/: genindex.html  index.html  installation.html  license.html  tutorials.html
0.6.1/: .buildinfo  api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  tutorials.html
0.7.0/: .buildinfo  api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  tutorials.html
0.8.0/: api.html  citing.html  examples.html  installation.html  tutorials.html
0.8.1/: .buildinfo  api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  tutorials.html
0.9.0/: api.html  index.html  license.html  search.html  tutorials.html
0.9.1/: .buildinfo  api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  tutorials.html
1.0.0/: citing.html  genindex.html  index.html  objects.inv  search.html
1.0.1/: api.html  citing.html
1.0.2/: genindex.html  license.html  objects.inv
1.0.4/: genindex.html  installation.html  search.html
1.0.5/: api.html  citing.html  contribution.html  genindex.html  index.html  installation.html  license.html  search.html  searchindex.js  tutorials.html
1.0.6/: genindex.html  index.html  search.html  searchindex.js  tutorials.html
2.0.0-dev0/: api.html  citing.html  contribution.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  tutorials.html
2.1.1/: 404.html  index.html  objects.inv  sitemap.xml
2.1.1-dev0/: 404.html  index.html  objects.inv  sitemap.xml
2.1.1-rc0/: 404.html  index.html  objects.inv  sitemap.xml
2.1.1-rc1/: 404.html  index.html  objects.inv  sitemap.xml
2.1.2/: 404.html  index.html  objects.inv  sitemap.xml
2.2.0/: 404.html  index.html  objects.inv  sitemap.xml
TestResults/: junitresults_172d48da-3732-4277-8a8e-5affc64ce473.xml  junitresults_b26545bf-05ac-4f98-bd63-efe52a806953.xml  junitresults_b2a2d94d-c077-432f-80f2-3e91ea9801c2.xml  junitresults_ebd2a7cb-cf32-4b0b-be32-14b1d0f049d3.xml
data/: fall_demonstrator_test.btlx  fall_demonstrator_test_model.json  fall_demonstrator_test_nesting.json  lines.json  model_nesting_test.btlx  model_test.btlx  model_test.json  nesting_test.btlx  nesting_test.json  y_joint_lines.json
docs/: api.rst  citing.md  citing.rst  conf.py  contribution.rst  ct_setup_checklist.html  examples.rst  index.md  index.rst  installation.md  installation.rst  tutorials.rst
examples/: Ass_from_srf_V2.3dm  Ass_from_srf_demo.gh  beam.json  sample.btlx
(+2100 files in other folders)
