# ============================================================================
# Project info
# ============================================================================

[project]
name = "compas_timber"
description = "COMPAS package for modeling, designing and fabricating timber assemblies."
authors = [
    { name = "Aleksandra Anna Apolinarska", email = "apolinarska@arch.ethz.ch" },
    { name = "Chen Kasirer", email = "kasirer@arch.ethz.ch" },
    { name = "Gonzalo Casas", email = "casas@arch.ethz.ch" },
    { name = "Jonas Haldemann", email = "haldemann@arch.ethz.ch" },
    { name = "Oliver Appling Bucklin", email = "bucklin@arch.ethz.ch" },
    { name = "Aurèle L. Gheyselinck", email = "gheyselinck@arch.ethz.ch" },
    { name = "Panayiotis Papacharalambous", email = "papacharalambous@arch.ethz.ch" },
    { name = "Anastasiia Stryzhevska", email = "astryzhevska@arch.ethz.ch" },
    { name = "Jelle Feringa", email = "jelleferinga@gmail.com" },
    { name = "Joseph Kenny", email = "jk6372@princeton.edu" },
    { name = "Beverly Lytle", email = "lytle@arch.ethz.ch" },
    { name = "Eric Gozzi", email = "eric.gozzi@arch.ethz.ch" },
    { name = "Rodrigo Arca Zimmermann", email = "rodrigo.arca@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "rtree",
    "compas >=2.0, <3.0",
    "compas_model == 0.9.1", # pin until first release
]

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "compas_invocations2",
    "invoke >=0.14",
    "ruff",
    "twine",
    "wheel",
    "pytest-mock",
    "pytest>=8.0",
    "build",
    "tomlkit",
    "pytest-cov",
    "pytest-randomly",
    "pre-commit",
]

gh = [
    "compas_invocations2",
    "tomlkit",
    "pythonnet",
]

docs = [
    "markdown-callouts >=0.4",
    "markdown-exec >=1.8",
    "mike",
    "mkdocs >=1.6",
    "mkdocs-autorefs >=1.4",
    "mkdocs-coverage >=1.0",
    "mkdocs-git-revision-date-localized-plugin >=1.2",
    "mkdocs-llmstxt >=0.2",
    "mkdocs-material >=9.5",
    "mkdocs-minify-plugin >=0.8",
    "mkdocs-redirects >=1.2",
    "mkdocs-section-index >=0.3",
    "mkdocs-mermaid2-plugin",
    "mkdocstrings[python]",
    "pydantic >=2.10",
    "tomli >=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://gramaziokohler.github.io/compas_timber/latest/"
Repository = "https://github.com/gramaziokohler/compas_timber"

# ============================================================================
# Setup and build
# ============================================================================

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "compas_timber.__version__" }
dependencies = { file = "requirements.txt" }
optional-dependencies = { dev = { file = "requirements-dev.txt" } }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]

# ============================================================================
# Release
# ============================================================================

[tool.bumpversion]
current_version = "2.0.0-dev0"
message = "Bump version to {new_version}"
commit = true
tag = true
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        -                             # dash separator for pre-release section
        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
        (?P<pre_n>0|[1-9]\\d*)        # pre-release version number
    )?                                # pre-release section is optional
"""
serialize = [
    "{major}.{minor}.{patch}-{pre_l}{pre_n}",
    "{major}.{minor}.{patch}",
]

[tool.bumpversion.parts.pre_l]
values = ["dev", "rc", "final"]
optional_value = "final"

[[tool.bumpversion.files]]
filename = "src/compas_timber/__init__.py"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"
replace = "[{new_version}] {now:%Y-%m-%d}"

# ============================================================================
# linting and formatting
# ============================================================================

[tool.black]
extend-exclude = '(/[a-zA-Z\./]*[\s]?)'  # exclude everything, black should be removed..

[tool.isort]
line_length = 179
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
force_single_line = true
ensure_newline_before_comments = true
known_first_party = "compas_timber"
default_section = "THIRDPARTY"
forced_separate = "test_compas_timber"

[tool.ruff]
line-length = 179
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I001"]
"tests/*" = ["I001"]
"tasks.py" = ["I001"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = [
    "compas_timber",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 179

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

# ============================================================================
# Testing
# ============================================================================

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = [
    "test_*.py",
    "tests.py"
]
addopts = "-ra --strict --doctest-modules --doctest-glob=*.rst --tb=short"
doctest_optionflags= "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE ALLOW_BYTES NUMBER"
filterwarnings = "ignore::DeprecationWarning"
